# flserial

macos/: flserial.podspec
macos/Classes/: flserial.cpp  flserial.h
macos/Frameworks/serial.framework/Versions/C/: serial
macos/Frameworks/serial.framework/Versions/C/Resources/: Info.plist
src/: CMakeLists.txt  flserial.cpp
src/serial/: CMakeLists.txt
